비디오 컴포넌트 통합 작업

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -14,3 +14,5 @@
 @import "section/today";
 @import "section/developer";
 @import "section/webd";
+@import "section/video";
+@import "section/swiper";
